--- a/app/Resources/themes/theme1/lucky/number.html.twig
+++ b/app/Resources/themes/theme1/lucky/number.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>views</h1>
+    <h1>Standard Theme</h1>
     <h1>Lucky Numbers: {{ luckyNumberList }}</h1>
 {% endblock %}
